--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwindcss": "^3.0.23"
   }
 }
