--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "next": "^12.2.5",
     "next-sitemap": "^3.1.10",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
